# Presentat

./: README.md  app.nam.Presentat.json  meson.build
.flatpak-builder/checksums/: x86_64-app.nam.Presentat.json
data/: app.nam.Presentat.desktop.in  app.nam.Presentat.gschema.xml  app.nam.Presentat.metainfo.xml.in  app.nam.Presentat.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.py  meson.build  presentat.gresource.xml  presentat.in  window.py  window.ui
src/core/: directory_tree.py  file_manager.py  marp_converter.py  previewer.py
